# aprp-monorepo

./: .gitignore  .gitmodules  README.md  nx.json  package-lock.json  package.json  pyproject.toml
scripts/: install.sh
