[tool.poetry]
name = "aprp-monorepo"
version = "1.0.0"
description = ""
authors = [ ]
license = "Proprietary"
readme = "README.md"

  [tool.poetry.dependencies]
  python = ">=3.8,<3.12"

    [tool.poetry.dependencies.serverlogic]
    path = "packages/server/packages/logic"
    develop = true

    [tool.poetry.dependencies.clientlogic]
    path = "packages/client/packages/logic"
    develop = true

[build-system]
requires = [ "poetry-core==1.1.0" ]
build-backend = "poetry.core.masonry.api"
